# containerized-model-training-example

./: Common.dockerignore  Dockerfile  LICENSE  README.md  is_ready.sh  model_train.sh  pyproject.toml  text_classifier.py
